# cpuminer-multi-test

./: Makefile.am  build.sh  cpu-miner.c  darkcoin-mod.cl  darkcoin.cl  gpu.c  gpu.h  miner.h  util.c  x11.c
nbproject/: project.xml
nbproject/private/: private.xml
